<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".VerActivity">

    <TextView
        android:id="@+id/view_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/text_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/view_nombre"
        android:textColor="@color/gray"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/view_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/text_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:labelFor="@id/view_telefono"
        android:textColor="@color/gray"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/view_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_direccion"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/text_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/view_direccion"
        android:textColor="@color/gray"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/view_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_correo"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/text_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/view_correo"
        android:textColor="@color/gray"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/view_nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nota"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/text_nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/view_nota"
        android:textColor="@color/gray"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar"
        android:layout_gravity="center"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingEditar"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:foregroundTint="#4CAF50"
        android:src="@drawable/ic_editar"
        app:backgroundTint="#4CAF50"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingEliminar"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_baseline_delete_24"
        app:backgroundTint="#F44336"
        app:tint="@color/white" />

</LinearLayout>